--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 *.dll
 *.so
 *.dylib
-todo
 
 # Test binary, build with `go test -c`
 *.test
@@ -67,3 +66,10 @@ tags
 !.vscode/extensions.json
 
 # End of https://www.gitignore.io/api/go,vim,macos,visualstudiocode
+
+# ssl 
+key
+cert
+
+# builds
+cmd/todo/todo
